--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jsdevtools/chai-exec": "^2.1.1",
+    "@jsdevtools/ez-spawn": "^3.0.4",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "mocha": "^8.1.0",
