feat: created first round of test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "createkeys": "node createKeys.js",
+    "encrypt":"node encryptFile.js",
+    "decrypt":"node decryptFile.js"
   },
   "author": "",
   "license": "ISC",
